<resources>
    <string name="app_name">FabFlix</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_title">Log Into FabFlix</string>
    <string name="search_title">Search For Movies Here</string>
    <string name="search_button">Search</string>
    <string name="default_movie_title">"Title: "</string>
    <string name="default_movie_year">"Year: "</string>
    <string name="default_director">"Director: "</string>
    <string name="default_cast">"Cast: "</string>
    <string name="default_genres">"Genre(s): "</string>
</resources>
